-CTD Mapping using Json